--- a/web3.html
+++ b/web3.html
@@ -60,7 +60,7 @@
     
     <div class="mySlides fade">
       <img src="memories/nftss.png">
-      <div class="text">When I will have the fiat neccesary these will be the first NFTs I will by(my favorite projects)</div>
+      <div class="text">When I will have the fiat neccesary these will be the first NFTs I will buy(my favorite projects)</div>
     </div>
     
     <a class="prev" onclick="plusSlides(-1)">❮</a>
