--- a/theingredients.html
+++ b/theingredients.html
@@ -43,13 +43,13 @@
                 <a href="theingredients.html">12 and a half ingrediendts to success</a>
             </li>
         </ul>
-
+    </div>
     <div class="box-right">
     <div class="slideshow-container">
 
     <div class="mySlides fade">
       <img src="memories/success.png">
-      <div class="text"> Trying to protect myself or work on to keep my soul and mind clean</div>
+      <div class="text"> Trying to protect myself or work on, to keep my soul and mind clean.</div>
     </div>
     
     <a class="prev" onclick="plusSlides(-1)">❮</a>
