--- a/web3.html
+++ b/web3.html
@@ -43,7 +43,7 @@
                 <a href="theingredients.html">12 and a half ingrediendts to success</a>
             </li>
         </ul>
-
+    </div>
     <div class="box-right">
         
     <div class="slideshow-container">
