--- a/videoediting.html
+++ b/videoediting.html
@@ -50,8 +50,7 @@
 
    <div class="mySlides fade">
       <img src="memories/videoediting.jpg">
-      <div class="text">You can find what I do on the instagram account(
-serbanpri.github.io/MyProcess1704) or tiktok(https://www.tiktok.com/@oneforallallfordao) </div>
+      <div class="text">You can find what I do on the instagram account(https://www.instagram.com/myprocess1704/?hl=en) or tiktok(https://www.tiktok.com/@oneforallallfordao) </div>
     </div>
     
     <a class="prev" onclick="plusSlides(-1)">❮</a>
