--- a/real_estate.html
+++ b/real_estate.html
@@ -65,7 +65,7 @@
 
     <div class="mySlides fade">
         <img src="memories/rl3.jpg">
-        <div class="text">In the same time keeping the origins of my nation</div>
+        <div class="text">In the same time keeping alive the origins of my nation</div>
       </div>
         
         
