--- a/code.html
+++ b/code.html
@@ -68,7 +68,7 @@
     <div class="mySlides fade">
       <img src="memories/probably nothing.jpg">
         <div class="text">(link) 1. https://serbanpri.github.io/CitatulReal.GitHub.io/</div>   
-        <div class="text">2. http://myprocess.tech/index.html</div>
+        <div class="text">2. https://serbanpri.github.io/MyProcess1704/index.html</div>
     </div>
 
     <div class="mySlides fade">
